# distributed-systems

./: .gitignore  README.md
common/include/: Utils.h
common/source/: Utils.cpp
pipes/: Makefile  main.cpp
pipes/include/: Consumer.h  Producer.h
pipes/source/: Consumer.cpp  Producer.cpp
signals/signal-firer/include/: SignalFirer.h
signals/signal-firer/source/: SignalFirer.cpp
signals/signal-handler/: main.cpp
sockets/: workspace.code-workspace
sockets/common/: CMakeLists.txt
sockets/common/include/: BasePeer.h  BufferHolder.h  BufferReader.h  BufferWriter.h  BufferWritter.h  Client.h  Defines.h  Server.h
sockets/common/source/: BasePeer.cpp  BufferReader.cpp  BufferWriter.cpp  BufferWritter.cpp  Client.cpp  Server.cpp
sockets/consumer/: CMakeLists.txt  main.cpp
sockets/consumer/include/: server.h
sockets/consumer/source/: main.cpp  server.cpp
sockets/producer/: CMakeLists.txt  Makefile  main.cpp
sockets/producer/include/: Client.h
sockets/producer/output/: main
sockets/producer/source/: Client.cpp  main.cpp
tp1/: README.md
tp1/pipes/: main.cpp
tp1/pipes/source/: Consumer.cpp  Producer.cpp
tp1/signals/signal-firer/: main.cpp
tp1/signals/signal-handler/: Makefile  main.cpp
tp1/sockets/: workspace.code-workspace
tp1/sockets/common/include/: BasePeer.h  Server.h
tp1/sockets/common/source/: BasePeer.cpp  BufferHolder.cpp  BufferReader.cpp  Client.cpp
tp1/sockets/consumer/: CMakeLists.txt
tp1/sockets/consumer/source/: main.cpp
tp2/producer-consumer/: Program.cs  producer-consumer.csproj  runner.py
tp2/producer-consumer/src/: Program.cs
tp2/spinlocks-counter/: graph.py  runner.py  tp2.csproj
tp2/spinlocks-counter/src/: Program.cs  SpinLock.cs
tp3/: .gitignore
tp3/Common/: Common.csproj
tp3/Common/src/: Message.cs  MessageHandler.cs  MessageHandlerCollection.cs  MessageType.cs
tp3/Coordinator/: Coordinator.csproj  log_validator.py
tp3/Coordinator/src/: Coordinator.cs  Program.cs  ReleaseMessageHandler.cs  RequestMessageHandler.cs
tp3/Networking/src/: CommandId.cs  Connection.cs  PacketType.cs  Peer.Packet.cs  Peer.Threading.cs  Peer.cs
tp3/Networking/src/Serialization/: BufferHolder.cs  BufferReader.cs  BufferWriter.cs
tp3/Process/: Process.csproj  runner.py
tp3/Process/src/: GrantMessageHandler.cs  Process.cs  ProcessData.cs  Program.cs  SetIdMessageHandler.cs
